# isyndicate

./: README.md  pyproject.toml  setup.cfg
isyndicate/: __init__.py  exceptions.py
tests/: test_add.py
